--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,110 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LU GPA Calculator</title>
+    <title>LU GPA Calculator</title>
 </head>
 <body>
-	<header>Lehigh University</header>
-	<div class= "grid-container">
-		<div class = "grid-grade-row">
-			<div class = "grade-title">Letter Grade</div>
-			<div> </div>
-		</div>
-	</div>
-	
+    <header>Lehigh University</header>
+    <div class= "grid-container">
+        <div class = "grid-grade-col">
+            <label for="grade">Choose Grade:</label>
+            <div>
+                <select id="grade-1">
+                    <option value="A">A</option>
+                    <option value="-A">-A</option>
+                    <option value="+B">+B</option>
+                    <option value="B">B</option>
+                    <option value="-B">-B</option>
+                    <option value="+C">-C</option>
+                    <option value="C">C</option>
+                    <option value="-C">-C</option>
+                    <option value="+D">+D</option>
+                    <option value="D">D</option>
+                    <option value="-D">-D</option>
+                    <option value="F">F</option>
+                  </select>
+                  <select id="grade-2">
+                    <option value="A">A</option>
+                    <option value="-A">-A</option>
+                    <option value="+B">+B</option>
+                    <option value="B">B</option>
+                    <option value="-B">-B</option>
+                    <option value="+C">-C</option>
+                    <option value="C">C</option>
+                    <option value="-C">-C</option>
+                    <option value="+D">+D</option>
+                    <option value="D">D</option>
+                    <option value="-D">-D</option>
+                    <option value="F">F</option>
+                  </select>
+                  <select id="grade-3">
+                    <option value="A">A</option>
+                    <option value="-A">-A</option>
+                    <option value="+B">+B</option>
+                    <option value="B">B</option>
+                    <option value="-B">-B</option>
+                    <option value="+C">-C</option>
+                    <option value="C">C</option>
+                    <option value="-C">-C</option>
+                    <option value="+D">+D</option>
+                    <option value="D">D</option>
+                    <option value="-D">-D</option>
+                    <option value="F">F</option>
+                  </select>
+                  <select id="grade-4">
+                    <option value="A">A</option>
+                    <option value="-A">-A</option>
+                    <option value="+B">+B</option>
+                    <option value="B">B</option>
+                    <option value="-B">-B</option>
+                    <option value="+C">-C</option>
+                    <option value="C">C</option>
+                    <option value="-C">-C</option>
+                    <option value="+D">+D</option>
+                    <option value="D">D</option>
+                    <option value="-D">-D</option>
+                    <option value="F">F</option>
+                  </select>
+                  <select id="grade-5">
+                    <option value="A">A</option>
+                    <option value="-A">-A</option>
+                    <option value="+B">+B</option>
+                    <option value="B">B</option>
+                    <option value="-B">-B</option>
+                    <option value="+C">-C</option>
+                    <option value="C">C</option>
+                    <option value="-C">-C</option>
+                    <option value="+D">+D</option>
+                    <option value="D">D</option>
+                    <option value="-D">-D</option>
+                    <option value="F">F</option>
+                  </select>
+                  <select id="grade-6">
+                    <option value="A">A</option>
+                    <option value="-A">-A</option>
+                    <option value="+B">+B</option>
+                    <option value="B">B</option>
+                    <option value="-B">-B</option>
+                    <option value="+C">-C</option>
+                    <option value="C">C</option>
+                    <option value="-C">-C</option>
+                    <option value="+D">+D</option>
+                    <option value="D">D</option>
+                    <option value="-D">-D</option>
+                    <option value="F">F</option>
+                  </select>
+            </div>
+        </div>
+        <div class = "grid-pf-col">
+            <label for="pf"></label>
+
+            <div>
+
+            </div>
+        </div>
+        <div class = "gird-credit-col">
+            <div class= "credit-title"> </div>
+        </div>
+    </div>  
 </body>
 </html>
