--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <div class= "grid-container">
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
-            <div>
+            <div classname="grade-colm" id = "grade">
                 <select id="grade-1">
                     <option value="A">A</option>
                     <option value="-A">-A</option>
