--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,8 @@
             <label for="grade">Choose Grade:</label>
             <div classname="grade-colm" id = "grade">
                 <select id="grade-1">
-                    <option value="A">A</option>
+					<option value="N/A" selected>N/A</option>
+					<option value="A">A</option>
                     <option value="-A">-A</option>
                     <option value="+B">+B</option>
                     <option value="B">B</option>
@@ -24,6 +25,7 @@
                     <option value="F">F</option>
                   </select>
                   <select id="grade-2">
+					<option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
                     <option value="-A">-A</option>
                     <option value="+B">+B</option>
@@ -38,6 +40,7 @@
                     <option value="F">F</option>
                   </select>
                   <select id="grade-3">
+					<option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
                     <option value="-A">-A</option>
                     <option value="+B">+B</option>
@@ -52,6 +55,7 @@
                     <option value="F">F</option>
                   </select>
                   <select id="grade-4">
+					<option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
                     <option value="-A">-A</option>
                     <option value="+B">+B</option>
@@ -66,6 +70,7 @@
                     <option value="F">F</option>
                   </select>
                   <select id="grade-5">
+					<option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
                     <option value="-A">-A</option>
                     <option value="+B">+B</option>
@@ -80,6 +85,7 @@
                     <option value="F">F</option>
                   </select>
                   <select id="grade-6">
+					<option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
                     <option value="-A">-A</option>
                     <option value="+B">+B</option>
@@ -96,14 +102,44 @@
             </div>
         </div>
         <div class = "grid-pf-col">
-            <label for="pf"></label>
-
-            <div>
-
+            <label for="pf">P/F</label>
+            <div class = "p-colm" id="pf">
+				<select id="pf-1">
+					<option value = "pf" selected>Pass/Fail</option>
+					<option value = "for-credit">Credit</option>
+				</select>
+				<select id="pf-2">
+					<option value = "pf" selected>Pass/Fail</option>
+					<option value = "for-credit">Credit</option>
+				</select>
+				<select id="pf-3">
+					<option value = "pf" selected>Pass/Fail</option>
+					<option value = "for-credit">Credit</option>
+				</select>
+				<select id="pf-4">
+					<option value = "pf" selected>Pass/Fail</option>
+					<option value = "for-credit">Credit</option>
+				</select>
+				<select id="pf-5">
+					<option value = "pf" selected>Pass/Fail</option>
+					<option value = "for-credit">Credit</option>
+				</select>
+				<select id="pf-6">
+					<option value = "pf" selected>Pass/Fail</option>
+					<option value = "for-credit">Credit</option>
+				</select>
             </div>
         </div>
         <div class = "gird-credit-col">
-            <div class= "credit-title"> </div>
+			<label for="credits">Credits</label>
+			<div class = "credits-colm" id = "credits">
+				<input type = "text" id = "credits-1" placeholder="0">
+				<input type = "text" id = "credits-2" placeholder="0">
+				<input type = "text" id = "credits-3" placeholder="0">
+				<input type = "text" id = "credits-4" placeholder="0">
+				<input type = "text" id = "credits-5" placeholder="0">
+				<input type = "text" id = "credits-6" placeholder="0">
+			</div>
         </div>
     </div>  
 </body>
