--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LU GPA Calculator</title>
+	<title>LU GPA Calculator</title>
+	<link rel="stylesheet" type = "text/css" href="../css/style.css">
 </head>
 <body>
     <header>Lehigh University</header>
     <div class= "grid-container">
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
-            <div classname="grade-colm" id = "grade">
+            <div classname = "grade-colm" id = "grade">
                 <select id="grade-1">
 					<option value="N/A" selected>N/A</option>
 					<option value="A">A</option>
@@ -130,7 +131,7 @@
 				</select>
             </div>
         </div>
-        <div class = "gird-credit-col">
+        <div class = "grid-credit-col">
 			<label for="credits">Credits</label>
 			<div class = "credits-colm" id = "credits">
 				<input type = "text" id = "credits-1" placeholder="0">
