--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <div class= "grid-container">
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
-            <div classname = "grade-colm" id = "grade">
+            <div class = "grade-colm" id = "grade">
                 <select id="grade-1">
 					<option value="N/A" selected>N/A</option>
 					<option value="A">A</option>
