added current GPA

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type = "text/css" href="../css/style.css">
 </head>
 <body>
-    <header>Lehigh University</header>
+	<header>Lehigh University</header>
+	<input type="text" id="curr-GPA" placeholder="4.0">
     <div class= "grid-container">
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
