added current GPA

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<header>Lehigh University</header>
+	<label for ="curr-GPA">Current GPA</label>
 	<input type="text" id="curr-GPA" placeholder="4.0">
     <div class= "grid-container">
         <div class = "grid-grade-col">
