--- a/html/index.html
+++ b/html/index.html
@@ -1,149 +1,168 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LU GPA Calculator</title>
-	<link rel="stylesheet" type = "text/css" href="../css/style.css">
+    <title>LU GPA Calculator</title>
+    <link rel="stylesheet" type = "text/css" href="../css/style.css">
 </head>
 <body>
-	<header>Lehigh University</header>
-	<label for ="curr-GPA">Current GPA</label>
-	<input type="text" id="curr-GPA" placeholder="4.0">
+    <header>Lehigh University</header>
+    <label for ="curr-GPA">Current GPA</label>
+    <input type="text" id="curr-GPA" placeholder="4.0">
     <div class= "grid-container">
+        <div class = "grid-course-col">
+            <label for="courses">Credits</label>
+            <div class = "course-colm" id = "courses">
+                <input type = "text" id = "course-1" placeholder="Enter Course Name">
+                <input type = "text" id = "course-2" placeholder="Enter Course Name">
+                <input type = "text" id = "course-3" placeholder="Enter Course Name">
+                <input type = "text" id = "course-4" placeholder="Enter Course Name">
+                <input type = "text" id = "course-5" placeholder="Enter Course Name">
+                <input type = "text" id = "course-6" placeholder="Enter Course Name">
+            </div>
+        </div>
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
             <div class = "grade-colm" id = "grade">
                 <select id="grade-1">
-					<option value="N/A" selected>N/A</option>
-					<option value="A">A</option>
-                    <option value="-A">-A</option>
-                    <option value="+B">+B</option>
+                    <option value="N/A" selected>N/A</option>
+                    <option value="A">A</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
                     <option value="B">B</option>
-                    <option value="-B">-B</option>
-                    <option value="+C">-C</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
                     <option value="C">C</option>
-                    <option value="-C">-C</option>
-                    <option value="+D">+D</option>
+                    <option value="C-">C-</option>
+                    <option value="D+">D+</option>
                     <option value="D">D</option>
-                    <option value="-D">-D</option>
+                    <option value="D-">D-</option>
                     <option value="F">F</option>
                   </select>
                   <select id="grade-2">
-					<option value="N/A" selected>N/A</option>
+                    <option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
-                    <option value="-A">-A</option>
-                    <option value="+B">+B</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
                     <option value="B">B</option>
-                    <option value="-B">-B</option>
-                    <option value="+C">-C</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
                     <option value="C">C</option>
-                    <option value="-C">-C</option>
-                    <option value="+D">+D</option>
+                    <option value="C-">C-</option>
+                    <option value="D+">D+</option>
                     <option value="D">D</option>
-                    <option value="-D">-D</option>
+                    <option value="D-">D-</option>
                     <option value="F">F</option>
                   </select>
                   <select id="grade-3">
-					<option value="N/A" selected>N/A</option>
+                    <option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
-                    <option value="-A">-A</option>
-                    <option value="+B">+B</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
                     <option value="B">B</option>
-                    <option value="-B">-B</option>
-                    <option value="+C">-C</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
                     <option value="C">C</option>
-                    <option value="-C">-C</option>
-                    <option value="+D">+D</option>
+                    <option value="C-">C-</option>
+                    <option value="D+">D+</option>
                     <option value="D">D</option>
-                    <option value="-D">-D</option>
+                    <option value="D-">D-</option>
                     <option value="F">F</option>
                   </select>
                   <select id="grade-4">
-					<option value="N/A" selected>N/A</option>
+                    <option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
-                    <option value="-A">-A</option>
-                    <option value="+B">+B</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
                     <option value="B">B</option>
-                    <option value="-B">-B</option>
-                    <option value="+C">-C</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
                     <option value="C">C</option>
-                    <option value="-C">-C</option>
-                    <option value="+D">+D</option>
+                    <option value="C-">C-</option>
+                    <option value="D+">D+</option>
                     <option value="D">D</option>
-                    <option value="-D">-D</option>
+                    <option value="D-">D-</option>
                     <option value="F">F</option>
                   </select>
                   <select id="grade-5">
-					<option value="N/A" selected>N/A</option>
+                    <option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
-                    <option value="-A">-A</option>
-                    <option value="+B">+B</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
                     <option value="B">B</option>
-                    <option value="-B">-B</option>
-                    <option value="+C">-C</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
                     <option value="C">C</option>
-                    <option value="-C">-C</option>
-                    <option value="+D">+D</option>
+                    <option value="C-">C-</option>
+                    <option value="D+">D+</option>
                     <option value="D">D</option>
-                    <option value="-D">-D</option>
+                    <option value="D-">D-</option>
                     <option value="F">F</option>
                   </select>
                   <select id="grade-6">
-					<option value="N/A" selected>N/A</option>
+                    <option value="N/A" selected>N/A</option>
                     <option value="A">A</option>
-                    <option value="-A">-A</option>
-                    <option value="+B">+B</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
                     <option value="B">B</option>
-                    <option value="-B">-B</option>
-                    <option value="+C">-C</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
                     <option value="C">C</option>
-                    <option value="-C">-C</option>
-                    <option value="+D">+D</option>
+                    <option value="C-">C-</option>
+                    <option value="D+">D+</option>
                     <option value="D">D</option>
-                    <option value="-D">-D</option>
+                    <option value="D-">D-</option>
                     <option value="F">F</option>
                   </select>
             </div>
         </div>
         <div class = "grid-pf-col">
-            <label for="pf">P/F</label>
-            <div class = "p-colm" id="pf">
-				<select id="pf-1">
-					<option value = "pf" selected>Pass/Fail</option>
-					<option value = "for-credit">Credit</option>
-				</select>
-				<select id="pf-2">
-					<option value = "pf" selected>Pass/Fail</option>
-					<option value = "for-credit">Credit</option>
-				</select>
-				<select id="pf-3">
-					<option value = "pf" selected>Pass/Fail</option>
-					<option value = "for-credit">Credit</option>
-				</select>
-				<select id="pf-4">
-					<option value = "pf" selected>Pass/Fail</option>
-					<option value = "for-credit">Credit</option>
-				</select>
-				<select id="pf-5">
-					<option value = "pf" selected>Pass/Fail</option>
-					<option value = "for-credit">Credit</option>
-				</select>
-				<select id="pf-6">
-					<option value = "pf" selected>Pass/Fail</option>
-					<option value = "for-credit">Credit</option>
-				</select>
+            <label for="credits">Credits</label>
+            <div class = "credits-colm" id="credits">
+                <select id="credits-1">
+                    <option value = "pf" selected>Pass/Fail</option>
+                    <option value = "one">1</option>
+                    <option value = "two">2</option>
+                    <option value = "three">3</option>
+                    <option value = "four">4</option>
+                </select>
+                <select id="credits-2">
+                    <option value = "pf" selected>Pass/Fail</option>
+                    <option value = "one">1</option>
+                    <option value = "two">2</option>
+                    <option value = "three">3</option>
+                    <option value = "four">4</option>
+                </select>
+                <select id="credits-3">
+                    <option value = "pf" selected>Pass/Fail</option>
+                    <option value = "one">1</option>
+                    <option value = "two">2</option>
+                    <option value = "three">3</option>
+                    <option value = "four">4</option>
+                </select>
+                <select id="credits-4">
+                    <option value = "pf" selected>Pass/Fail</option>
+                    <option value = "one">1</option>
+                    <option value = "two">2</option>
+                    <option value = "three">3</option>
+                    <option value = "four">4</option>
+                </select>
+                <select id="credits-5">
+                    <option value = "pf" selected>Pass/Fail</option>
+                    <option value = "one">1</option>
+                    <option value = "two">2</option>
+                    <option value = "three">3</option>
+                    <option value = "four">4</option>
+                </select>
+                <select id="credits-6">
+                    <option value = "pf" selected>Pass/Fail</option>
+                    <option value = "one">1</option>
+                    <option value = "two">2</option>
+                    <option value = "three">3</option>
+                    <option value = "four">4</option>
+                </select>
             </div>
-        </div>
-        <div class = "grid-credit-col">
-			<label for="credits">Credits</label>
-			<div class = "credits-colm" id = "credits">
-				<input type = "text" id = "credits-1" placeholder="0">
-				<input type = "text" id = "credits-2" placeholder="0">
-				<input type = "text" id = "credits-3" placeholder="0">
-				<input type = "text" id = "credits-4" placeholder="0">
-				<input type = "text" id = "credits-5" placeholder="0">
-				<input type = "text" id = "credits-6" placeholder="0">
-			</div>
         </div>
     </div>  
 </body>
 </html>
+
