--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <input type="text" id="curr-GPA" placeholder="4.0">
     <div class= "grid-container">
         <div class = "grid-course-col">
-            <label for="courses">Credits</label>
+            <label for="courses">Courses</label>
             <div class = "course-colm" id = "courses">
                 <input type = "text" id = "course-1" placeholder="Enter Course Name">
                 <input type = "text" id = "course-2" placeholder="Enter Course Name">
