--- a/html/index.html
+++ b/html/index.html
@@ -161,7 +161,8 @@
                     <option value = "four">4</option>
                 </select>
             </div>
-        </div>
+		</div>
+		<button type="submit" id="submit-btn">Submit</button>
     </div>  
 </body>
 </html>
