--- a/html/index.html
+++ b/html/index.html
@@ -8,18 +8,9 @@
     <header>Lehigh University</header>
     <label for ="curr-GPA">Current GPA</label>
     <input type="text" id="curr-GPA" placeholder="4.0">
+    <label for ="curr-GPA">Total Quality Points</label>
+    <input type="text" id="curr-QP" placeholder="4.0">
     <div class= "grid-container">
-        <div class = "grid-course-col">
-            <label for="courses">Courses</label>
-            <div class = "course-colm" id = "courses">
-                <input type = "text" id = "course-1" placeholder="Enter Course Name">
-                <input type = "text" id = "course-2" placeholder="Enter Course Name">
-                <input type = "text" id = "course-3" placeholder="Enter Course Name">
-                <input type = "text" id = "course-4" placeholder="Enter Course Name">
-                <input type = "text" id = "course-5" placeholder="Enter Course Name">
-                <input type = "text" id = "course-6" placeholder="Enter Course Name">
-            </div>
-        </div>
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
             <div class = "grade-colm" id = "grade">
@@ -119,42 +110,36 @@
             <label for="credits">Credits</label>
             <div class = "credits-colm" id="credits">
                 <select id="credits-1">
-                    <option value = "pf" selected>Pass/Fail</option>
                     <option value = "one">1</option>
                     <option value = "two">2</option>
                     <option value = "three">3</option>
                     <option value = "four">4</option>
                 </select>
                 <select id="credits-2">
-                    <option value = "pf" selected>Pass/Fail</option>
                     <option value = "one">1</option>
                     <option value = "two">2</option>
                     <option value = "three">3</option>
                     <option value = "four">4</option>
                 </select>
                 <select id="credits-3">
-                    <option value = "pf" selected>Pass/Fail</option>
                     <option value = "one">1</option>
                     <option value = "two">2</option>
                     <option value = "three">3</option>
                     <option value = "four">4</option>
                 </select>
                 <select id="credits-4">
-                    <option value = "pf" selected>Pass/Fail</option>
                     <option value = "one">1</option>
                     <option value = "two">2</option>
                     <option value = "three">3</option>
                     <option value = "four">4</option>
                 </select>
                 <select id="credits-5">
-                    <option value = "pf" selected>Pass/Fail</option>
                     <option value = "one">1</option>
                     <option value = "two">2</option>
                     <option value = "three">3</option>
                     <option value = "four">4</option>
                 </select>
                 <select id="credits-6">
-                    <option value = "pf" selected>Pass/Fail</option>
                     <option value = "one">1</option>
                     <option value = "two">2</option>
                     <option value = "three">3</option>
