--- a/html/index.html
+++ b/html/index.html
@@ -14,137 +14,13 @@
         <div class = "grid-grade-col">
             <label for="grade">Choose Grade:</label>
             <div class = "grade-colm" id = "grade">
-                <select id="grade-1">
-                    <option value="N/A" selected>N/A</option>
-                    <option value="A">A</option>
-                    <option value="A-">A-</option>
-                    <option value="B+">B+</option>
-                    <option value="B">B</option>
-                    <option value="B-">B-</option>
-                    <option value="C+">C+</option>
-                    <option value="C">C</option>
-                    <option value="C-">C-</option>
-                    <option value="D+">D+</option>
-                    <option value="D">D</option>
-                    <option value="D-">D-</option>
-                    <option value="F">F</option>
-                  </select>
-                  <select id="grade-2">
-                    <option value="N/A" selected>N/A</option>
-                    <option value="A">A</option>
-                    <option value="A-">A-</option>
-                    <option value="B+">B+</option>
-                    <option value="B">B</option>
-                    <option value="B-">B-</option>
-                    <option value="C+">C+</option>
-                    <option value="C">C</option>
-                    <option value="C-">C-</option>
-                    <option value="D+">D+</option>
-                    <option value="D">D</option>
-                    <option value="D-">D-</option>
-                    <option value="F">F</option>
-                  </select>
-                  <select id="grade-3">
-                    <option value="N/A" selected>N/A</option>
-                    <option value="A">A</option>
-                    <option value="A-">A-</option>
-                    <option value="B+">B+</option>
-                    <option value="B">B</option>
-                    <option value="B-">B-</option>
-                    <option value="C+">C+</option>
-                    <option value="C">C</option>
-                    <option value="C-">C-</option>
-                    <option value="D+">D+</option>
-                    <option value="D">D</option>
-                    <option value="D-">D-</option>
-                    <option value="F">F</option>
-                  </select>
-                  <select id="grade-4">
-                    <option value="N/A" selected>N/A</option>
-                    <option value="A">A</option>
-                    <option value="A-">A-</option>
-                    <option value="B+">B+</option>
-                    <option value="B">B</option>
-                    <option value="B-">B-</option>
-                    <option value="C+">C+</option>
-                    <option value="C">C</option>
-                    <option value="C-">C-</option>
-                    <option value="D+">D+</option>
-                    <option value="D">D</option>
-                    <option value="D-">D-</option>
-                    <option value="F">F</option>
-                  </select>
-                  <select id="grade-5">
-                    <option value="N/A" selected>N/A</option>
-                    <option value="A">A</option>
-                    <option value="A-">A-</option>
-                    <option value="B+">B+</option>
-                    <option value="B">B</option>
-                    <option value="B-">B-</option>
-                    <option value="C+">C+</option>
-                    <option value="C">C</option>
-                    <option value="C-">C-</option>
-                    <option value="D+">D+</option>
-                    <option value="D">D</option>
-                    <option value="D-">D-</option>
-                    <option value="F">F</option>
-                  </select>
-                  <select id="grade-6">
-                    <option value="N/A" selected>N/A</option>
-                    <option value="A">A</option>
-                    <option value="A-">A-</option>
-                    <option value="B+">B+</option>
-                    <option value="B">B</option>
-                    <option value="B-">B-</option>
-                    <option value="C+">C+</option>
-                    <option value="C">C</option>
-                    <option value="C-">C-</option>
-                    <option value="D+">D+</option>
-                    <option value="D">D</option>
-                    <option value="D-">D-</option>
-                    <option value="F">F</option>
-                  </select>
+                <!--GRADES COLUMN-->
             </div>
         </div>
         <div class = "grid-pf-col">
             <label for="credits">Credits</label>
             <div class = "credits-colm" id="credits">
-                <select id="credits-1">
-                    <option value = "one">1</option>
-                    <option value = "two">2</option>
-                    <option value = "three">3</option>
-                    <option value = "four">4</option>
-                </select>
-                <select id="credits-2">
-                    <option value = "one">1</option>
-                    <option value = "two">2</option>
-                    <option value = "three">3</option>
-                    <option value = "four">4</option>
-                </select>
-                <select id="credits-3">
-                    <option value = "one">1</option>
-                    <option value = "two">2</option>
-                    <option value = "three">3</option>
-                    <option value = "four">4</option>
-                </select>
-                <select id="credits-4">
-                    <option value = "one">1</option>
-                    <option value = "two">2</option>
-                    <option value = "three">3</option>
-                    <option value = "four">4</option>
-                </select>
-                <select id="credits-5">
-                    <option value = "one">1</option>
-                    <option value = "two">2</option>
-                    <option value = "three">3</option>
-                    <option value = "four">4</option>
-                </select>
-                <select id="credits-6">
-                    <option value = "one">1</option>
-                    <option value = "two">2</option>
-                    <option value = "three">3</option>
-                    <option value = "four">4</option>
-                </select>
+                <!--CREDITS COLUMN-->
 			</div>
 			<button type="submit" id="submit-btn">Submit</button>
 		</div>
@@ -152,4 +28,3 @@
     </div>  
 </body>
 </html>
-
