--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LU GPA Calculator</title>
+    <title>GPA Optimizer</title>
     <link rel="stylesheet" type = "text/css" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <header>Lehigh University</header>
+    <header><div class="topbar-text">~ grade wizard ~</div></header>
 
     <div class="view-container">
       
@@ -20,7 +20,7 @@
                 <div class="step-box">
                     <div class="header"> Step One </div>
                     <div class="sub-text"> Obtain your unofficial academic transcript at: </div>
-                    <a href="https://ssbp.lehigh.edu/ssb/twbkwbis.P_GenMenu?name=bmenu.P_MainMnu"> Banner </a>
+                    <a id="link" target="_blank" rel="noopener noreferrer" href="https://ssbp.lehigh.edu/ssb/twbkwbis.P_GenMenu?name=bmenu.P_MainMnu"> Banner </a>
                 </div>
                 <div class="step-box">
                     <div class="header"> Step Two </div>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="step-box">
                     <div class="header"> Step Three </div>
-                    <div class="sub-text"> Input your hypothetical / projected semesterly grades in the box below: </div>
+                    <div class="sub-text"> Input your hypothetical / projected semesterly grades in the input box </div>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
             <div class="input-box">
                 <label for ="curr-GPA">Total Credit Hours:</label>
                 <input type="text" id="curr-GPA" placeholder="100">
-                <label for ="curr-GPA">Total Quality Points:</label>
+                <label for ="curr-QP">Total Quality Points:</label>
                 <input type="text" id="curr-QP" placeholder="4.0">
 
                 <div class= "grid-container">
@@ -60,6 +60,9 @@
         </div>
 
     </div>
+
+    <header class="footer"><div class="footer-text">brought to you by oliver walsh, maxim vezenov, & jimmy johnson</div></header>
+
 
 </body>
 </html>
