--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <header><div class="topbar-text">~ grade wizard ~</div></header>
+    <header><div class="topbar-text">◐ grade wizard ◑</div></header>
 
     <div class="view-container">
       
