frontend for jim

--- a/html/index.html
+++ b/html/index.html
@@ -43,26 +43,36 @@
                 <input type="text" id="curr-QP" placeholder="400">
 
                 <div class= "grid-container">
-                    <div class = "grid-grade-col">
-                        <label for="grade">Choose Grade:</label>
-                        <div class="grade-colm" id="grades">
-                            <!--GRADES COLUMN-->
+
+                    <table>
+
+                        <div class = "grid-grade-col">
+                            <label for="grade">Choose Grade:</label>
+                            <div class="grade-colm" id="grades">
+                                <!--GRADES COLUMN-->
+                            </div>
                         </div>
-                    </div>
-                    <div class="grid-pf-col">
-                        <label for="credits">Enter Credits:</label>
-                        <div class="credits-colm" id="credits">
-                            <!--CREDITS COLUMN-->
+
+                        <div class="grid-pf-col">
+                            <label for="credits">Enter Credits:</label>
+                            <div class="credits-colm" id="credits">
+                                <!--CREDITS COLUMN-->
+                            </div>
+                            <button type="submit" id="submit-btn">Submit</button>
                         </div>
-                        <button type="submit" id="submit-btn">Submit</button>
-                    </div>
+
+                     </table>
+
                 </div>
             </div>  
         </div>
-
     </div>
 
-    <header class="footer"><div class="footer-text">brought to you by oliver walsh, maxim vezenov, & jimmy johnson</div></header>
+    <div class="footer">
+        <div class="footer-text">
+            brought to you by oliver walsh, maxim vezenov, & jimmy johnson
+        </div>
+    </div>
    
     <!--Script Swaaaagggggg-->
     <script src = "../js/script.js"></script>
