stylistic update + media query prep

--- a/html/index.html
+++ b/html/index.html
@@ -20,16 +20,16 @@
             <div class="instructions">
                 <div class="step-box">
                     <div class="header"> Step One </div>
-                    <div class="sub-text"> Obtain your unofficial academic transcript at: </div>
-                    <a id="link" target="_blank" rel="noopener noreferrer" href="https://ssbp.lehigh.edu/ssb/twbkwbis.P_GenMenu?name=bmenu.P_MainMnu"> Banner </a>
+                    <div class="sub-text"> Obtain your unofficial academic transcript from <a id="link" target="_blank" rel="noopener noreferrer" href="https://ssbp.lehigh.edu/ssb/twbkwbis.P_GenMenu?name=bmenu.P_MainMnu"> Banner </a></div>
+                    
                 </div>
                 <div class="step-box">
                     <div class="header"> Step Two </div>
-                    <div class="sub-text"> Retrieve your total credit hours & total quality points: </div>
+                    <div class="sub-text"> Retrieve your total credit hours & total quality points </div>
                 </div>
                 <div class="step-box">
                     <div class="header"> Step Three </div>
-                    <div class="sub-text"> Input your hypothetical / projected semesterly grades in the input box </div>
+                    <div class="sub-text"> Input your hypothetical / projected semesterly grades in the input section → </div>
                 </div>
             </div>
         </div>
@@ -37,11 +37,16 @@
         <!--INPUT BOX-->
         <div class="input-wrap">
             <div class="input-box">
-                <label for ="curr-GPA">Total Credit Hours:</label>
-                <input type="text" id="curr-GPA" placeholder="100">
-                <label for ="curr-QP">Total Quality Points:</label>
-                <input type="text" id="curr-QP" placeholder="400">
 
+                <div class="input-form2">
+                    <label for ="curr-GPA">Total Credit Hours:</label>
+                    <input type="text" id="curr-GPA" placeholder="100">
+                </div>
+
+                <div class="input-form2">
+                    <label for ="curr-QP">Total Quality Points:</label>
+                    <input type="text" id="curr-QP" placeholder="400">
+                </div>
 
                     
                     <table style="width:100%">
@@ -50,7 +55,7 @@
                             <th>Grade</th>
                             <th>Credits</th>
                         </tr>
-                        <tr >
+                        <tr>
                             <td>
                                 <div class="course-colm" id="courses">
                                 <!--Course COLUMN-->
