placeholder and finishes touches

--- a/html/index.html
+++ b/html/index.html
@@ -88,6 +88,10 @@
 
                 <button type="submit" id="submit-btn">Submit</button>
 
+                <button type="submit" id="addRow-btn">Add Row</button>
+
+                <button type="submit" id="removeRow-btn">Remove Row</button>
+
                 <div class="output-box" id="out">
                     <!--DISPLAY OUTPUTS-->
                 </div>
