added retake selection and made minor changes to course input box

--- a/html/index.html
+++ b/html/index.html
@@ -61,6 +61,7 @@
                             <th class="th-class">Course</th>
                             <th class="th-class">Grade</th>
                             <th class="th-class">Credits</th>
+                            <th class="th-class">Retake?</th>
                         </tr>
                         <tr>
                             <td>
@@ -76,6 +77,11 @@
                             <td>
                                 <div class="credits-colm" id="credits">
                                     <!--CREDITS COLUMN-->
+                                </div>
+                            </td>
+                            <td>
+                                <div class="retake-colm" id="retakes">
+                                    <!--RETAKE COLUMN-->
                                 </div>
                             </td>
                         </tr>
