push for pickup

--- a/html/index.html
+++ b/html/index.html
@@ -85,8 +85,8 @@
                         </tr>
                     </table> 
                     <button type="submit" id="submit-btn">Submit</button>
-                    <button type="submit" id="addRow-btn">Add Row</button>
-                    <button type="submit" id="removeRow-btn">Remove Row</button>
+                    <button type="submit" id="addRow-btn">Add Class</button>
+                    <button type="submit" id="removeRow-btn">Remove Class</button>
                     <div class="output-box" id="out">
                         <!--DISPLAY OUTPUTS-->
                     </div>
