WIP: Conditional fifth column

--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,7 @@
                             <th class="th-class">Grade</th>
                             <th class="th-class">Credits</th>
                             <th class="th-class">Retake?</th>
+                            <th class="th-class">Old Grade</th>
                         </tr>
                         <tr>
                             <td>
@@ -80,6 +81,11 @@
                             <td>
                                 <div class="retake-colm" id="retakes">
                                     <!--RETAKE COLUMN-->
+                                </div>
+                            </td>
+                            <td>
+                                <div class="oldGrade-colm" id="oldGrade">
+                                    <!--oldGrade COLUMN-->
                                 </div>
                             </td>
                         </tr>
