fixed up 5th column styling

--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
                             <th class="th-class">Grade</th>
                             <th class="th-class">Credits</th>
                             <th class="th-class">Retake?</th>
-                            <th class="th-class">Old Grade</th>
+                            <th class="th-class" id="th">Old Grade</th>
                         </tr>
                         <tr>
                             <td>
