made nicer navbar for navigating between the pages

--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,24 @@
     </head>
     <body>
         <header>
-            <button type="button" id="passFailCalc-page-btn">Pass/Fail</button>
-            <button type="button" id="classGradeCalc-page-btn">Course Grade</button>
-            <div class="topbar-text">◐ grade wizard ◑</div>
+            <nav>
+                <ul>
+                    <li id="logo">
+                        <div class="topbar-text">◐ grade wizard ◑</div>
+                      </li>
+                    <li> 
+                      <!-- link one -->
+                      <a id="passFailCalc-page-btn"> Pass/Fail </a>
+                    </li>
+                    <li>
+                      <!-- link two -->
+                       <a id="classGradeCalc-page-btn"> Course Grade </a>
+                    </li>
+                  </ul>
+            </nav>
+            <!-- <button type="button" id="passFailCalc-page-btn">Pass/Fail</button> -->
+            <!-- <button type="button" id="classGradeCalc-page-btn">Course Grade</button> -->
+            <!-- <div class="topbar-text">◐ grade wizard ◑</div> -->
         </header>
         <div id="passFailCalc-container">
             <div class="view-container">
