pages interact correctly

--- a/html/index.html
+++ b/html/index.html
@@ -121,12 +121,27 @@
         <div id="classGradeCalc-container">
             <div class="view-container">
 
+                <!--INSTRUCTIONS BOX-->
+                <div class="instruct-wrap">
+                    <div class="instructions">
+                        <div class="step-box">
+                            <div class="header"> Step One </div>
+                            <div class="sub-text"> Input grades for each section as a percentage 
+                            </div>
+                        </div>
+                        <div class="step-box">
+                            <div class="header"> Step Two </div>
+                            <div class="sub-text"> Input weights for each grade section </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="input-wrap">
                     <div class="input-box">
                         
                         <table style="width:100%">
                             <tr>
-                                <th class="th-class">Grade</th>
+                                <th class="th-class">Grade (%)</th>
                                 <th class="th-class">Weight</th>
                             </tr>
                             <tr>
