fixed how input boxes are responsive

--- a/html/index.html
+++ b/html/index.html
@@ -65,12 +65,16 @@
                 <!--INPUT BOX-->
                 <div class="input-wrap">
                     <div class="input-box">
-                        <div class="input-form2">
-                            <label for ="curr-GPA">Total Credit Hours:</label>
-                            <input type="text" id="curr-GPA" placeholder="100">
-                            <label for ="curr-QP">Total Quality Points:</label>
-                            <input type="text" id="curr-QP" placeholder="400">
-                        </div>
+    
+                            <div class="input-wrap2">
+                                <label for ="curr-GPA">Total Credit Hours:</label>
+                                <input type="text" id="curr-GPA" placeholder="100">
+                            </div>
+                            <div class="input-wrap2">
+                                <label for ="curr-QP">Total Quality Points:</label>
+                                <input type="text" id="curr-QP" placeholder="400">
+                            </div>
+                        
                             <table style="width:100%">
                                 <tr>
                                     <th class="th-class">Course</th>
