new column for pass/fail

--- a/html/index.html
+++ b/html/index.html
@@ -82,6 +82,7 @@
                                     <th class="th-class">Credits</th>
                                     <th class="th-class">Retake?</th>
                                     <th class="th-class" id="th">Old Grade</th>
+                                    <th class="th-class" id="th">Pass/Fail</th>
                                 </tr>
                                 <tr>
                                     <td>
@@ -107,6 +108,11 @@
                                     <td>
                                         <div class="oldGrade-colm" id="oldGrade">
                                             <!--oldGrade COLUMN-->
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="passFail-colm" id="passFails">
+                                            <!--passFails COLUMN-->
                                         </div>
                                     </td>
                                 </tr>
