commit to integrate with maxes code

--- a/html/index.html
+++ b/html/index.html
@@ -18,11 +18,11 @@
                       </li>
                     <li> 
                       <!-- link one -->
-                      <a id="passFailCalc-page-btn"> Pass/Fail </a>
+                      <a id="passFailCalc-page-btn"> pass/fail </a>
                     </li>
                     <li>
                       <!-- link two -->
-                       <a id="classGradeCalc-page-btn"> Course Grade </a>
+                       <a id="classGradeCalc-page-btn"> course grade </a>
                     </li>
                   </ul>
             </nav>
@@ -180,7 +180,7 @@
 
         <div class="footer">
             <div class="footer-text">
-                brought to you by oliver walsh, maxim vezenov, & jimmy johnson
+                for any issues or inquiries email us at GradeWizardTeam@gmail.com
             </div>
         </div>
         <script type="text/javascript" src="../js/ClickFunctions.js"></script>
