--- a/html/index.html
+++ b/html/index.html
@@ -83,6 +83,7 @@
                                         <th class="th-class">Credits</th>
                                         <th class="th-class">Retake?</th>
                                         <th class="th-class" id="th">Old Grade</th>
+                                        <th class="th-class" id="th">Pass/Fail?</th>
                                     </tr>
                                 </thead>
                                 <tbody id="passFailForm-tbody">
